--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 900px) {
 #main {
-  background-color: #FAF9F6;
+  background-color: #333;
   min-height: 10vh;
   height: fit-content;
   display: flex;
@@ -13,5 +13,6 @@
 
 h3 {
   margin-left: 0vw;
+  color: aliceblue;
 }
 }
