--- a/src/components/main/styles.css
+++ b/src/components/main/styles.css
@@ -1,13 +1,45 @@
 @media only screen and (min-width: 900px) {
     .main {
-        display: flex;
+        display: flex; 
         align-items: center; /* Vertical centering */
-        justify-content: center; 
+        justify-content: center;  
+        background-color: #1C1A1A;
+        width: "100%";
+        height: "100%";
     }
     #box {
         border: 2px solid gray; /* Add a border */
-  color: gray;
-        width: 400;
-        height: 300;
+        color: rgb(141, 128, 128);
+        width: 200;
+        height: 200;
+        padding-left: 200;
     }
+
+    #profpic {
+        width: 200;
+        height: 200;
+        align-items: 'center';
+    }
+
+    .column-container {
+        display: flex; /* Use flexbox for the container */
+        align-items: 'center';
+        justify-content: center;
+        
+      }
+      
+      .column {
+        flex: 1; /* Make each column take equal space */
+        padding: 16px;
+        border: 1px solid #ddd; /* Add a border for separation */
+        margin: 8px;
+        background-color: #1C1A1A; /* Set background color */
+        color: aliceblue;
+        height: "80%";
+      }
+
+      li {
+        color: aliceblue;
+      }
+    
 }
