--- a/src/components/projects_main/styles.css
+++ b/src/components/projects_main/styles.css
@@ -8,6 +8,7 @@
   }
   .card {
     width: 400px;
+    background-color: #333;
     border: 1px solid #ccc;
     border-radius: 8px;
     overflow: hidden;
