--- a/src/components/projects_main/styles.css
+++ b/src/components/projects_main/styles.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 900px) {
 .rowContainer {
     display: flex;
   }
@@ -19,4 +20,7 @@
   .card:hover{
     opacity: 0.5;
   }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 900px){}
  
