--- a/src/screens/home/styles.css
+++ b/src/screens/home/styles.css
@@ -1,5 +1,9 @@
+@media only screen and (min-width: 900px) {
 body, html {
     height: 100%;
     margin: 0;
     padding: 0;
   }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 900px){}
