--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -90,4 +90,116 @@ h3 {
 
 }
 
-@media only screen and (min-width: 320px) and (max-width: 900px){}
+@media only screen and (min-width: 320px) and (max-width: 900px){
+  #main {
+    background-color: #333;
+    min-height: 10vh;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 320px;
+    max-width: 900px;
+    cursor: pointer;
+    
+  }
+
+ 
+  .menu{
+    margin-left: 0%;
+    height: 10vh;
+    border-color: black;
+}
+.menu-img{
+   
+    min-height: 2vh;
+    max-height: 4vh; /* Magic here */
+    display: flex;
+    min-width: 1vw;
+    max-width: 6vw;
+    
+    
+    
+}
+
+
+
+  
+  
+  
+  .home-active {
+    border-top: 2px solid #fff;  
+    border-bottom: 2px solid #fff;
+    padding: 5px 40px; 
+    /*background: #ffffff;*/
+    opacity: 0.5;
+  }
+  .projects-active{
+    border-top: 2px solid #fff;  
+    border-bottom: 2px solid #fff;
+    padding: 5px 40px; 
+    /*background: #ffffff;*/
+    opacity: 0.5;
+  } 
+  .contact-active{
+    border-top: 2px solid #fff;  
+    border-bottom: 2px solid #fff;
+    padding: 5px 40px; 
+    /*background: #ffffff;*/
+    opacity: 0.5;
+  }
+  
+  .home{
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    padding: 5px 40px; 
+    opacity: 1;
+    transition: border 0.9s ease, opacity 0.5s ease;
+  }
+  
+  .home:hover {  
+    border-bottom: 2px solid #fff;
+    padding: 5px 40px; 
+    /*background: #ffffff;*/
+    opacity: 0.5;
+    
+  }
+  
+  .projects:hover {  
+    border-bottom: 2px solid #fff;
+    padding: 5px 40px; 
+    /*background: #ffffff;*/
+    opacity: 0.5;
+    
+  }
+  
+  .contact:hover {  
+    border-bottom: 2px solid #fff;
+    padding: 5px 40px; 
+    /*background: #ffffff;*/
+    opacity: 0.5;
+    
+  }
+  
+  
+  .projects{
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    padding: 5px 40px; 
+    opacity: 1;
+    transition: border 0.9s ease, opacity 0.5s ease;
+  }
+  .contact{
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    padding: 5px 40px; 
+    opacity: 1;
+    transition: border 0.9s ease, opacity 0.5s ease;
+  
+  }
+  
+  h3 {
+    margin-left: 0vw;
+    color: aliceblue;
+  }
+}
