--- a/src/components/main/styles.css
+++ b/src/components/main/styles.css
@@ -43,4 +43,46 @@
     
 }
 
-@media only screen and (min-width: 320px) and (max-width: 900px){}
+@media only screen and (min-width: 320px) and (max-width: 900px){
+  .main {
+    display: flex; 
+    align-items: center; /* Vertical centering */
+    justify-content: center;  
+    background-color: #1C1A1A;
+    width: "100%";
+    height: "100%";
+}
+#box {
+    border: 2px solid gray; /* Add a border */
+    color: rgb(141, 128, 128);
+    width: 200;
+    height: 200;
+    padding-left: 200;
+}
+
+#profpic {
+    width: 200;
+    height: 200;
+    align-items: 'center';
+}
+
+.column-container {
+    display: flex; /* Use flexbox for the container */
+    align-items: 'center';
+    justify-content: center;
+    
+  }
+  
+  .column {
+    flex: 1; /* Make each column take equal space */
+    
+     /* Add a border for separation */
+    background-color: #1C1A1A; /* Set background color */
+    color: aliceblue;
+    height: "80%";
+  }
+
+  li {
+    color: aliceblue;
+  }
+}
