--- a/src/components/projects_main/styles.css
+++ b/src/components/projects_main/styles.css
@@ -22,14 +22,16 @@
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 900px){
+@media only screen and (min-width: 0px) and (max-width: 900px){
   
   .card {
-    background-color: #1C1A1A;
-    border-bottom: 1px solid #ccc;
-    border-radius: 0px;
-    padding-bottom: '50px';
-   overflow: hidden;
+    max-width: 100%; /* Ensures the container does not exceed the viewport width */
+    margin: 0 auto;
+  }
+  .responsive-image {
+    width: 100%; /* Makes the image width 100% of its container */
+    height: auto; /* Allows the image height to adjust proportionally */
+    display: block; /* Removes extra space below inline images */
   }
 }
  
