--- a/src/components/footer/styles.css
+++ b/src/components/footer/styles.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 900px) {}
 @media only screen and (min-width: 0px) and (max-width: 900px){
     .footer{
-        max-width: 100%; /* Ensures the container does not exceed the viewport width */
+        width: 100%; /* Ensures the container does not exceed the viewport width */
         margin: 0 auto;
         background-color: #333;
         position: fixed;
