--- a/src/components/projects_main/styles.css
+++ b/src/components/projects_main/styles.css
@@ -17,6 +17,10 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
+  .card-para{
+    color: #ccc;
+  }
+
   .card:hover{
     opacity: 0.5;
   }
